height stretched bug present

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 
 body {
   width: 100%;
-  height: auto;
   display: flex;
   justify-content: center;
 }
@@ -90,7 +89,7 @@ body {
 }
 
 .search > input {
-  height: 50%;
+  height: 1.5rem;
   width: 90%;
 }
 
@@ -185,6 +184,10 @@ body {
   border-radius: 10px;
 }
 
+.project-card > p {
+  font-size: 1rem;
+}
+
 .project-card .announcements-trending {
   grid-column: 3 / 4;
   grid-row: 1 / 4;
@@ -202,4 +205,21 @@ body {
 .announcements,
 .trending {
   padding: 0.5rem;
+}
+
+.announcements > h4 {
+  margin-top: 1rem;
+}
+
+.announcements > p,
+hr {
+  margin-top: 0.5rem;
+}
+
+.trending > h3 {
+  margin-top: 2rem;
+}
+
+.trending-card {
+  margin-top: 0.5rem;
 }
